// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should format code blocks using Prettier with default options 1`] = `
"\`\`\`js
foo(
  reallyLongArg(),
  omgSoManyParameters(),
  IShouldRefactorThis(),
  isThereSeriouslyAnotherOne()
)

\`\`\`
"
`;

exports[`should format code blocks using Prettier with specified parser 1`] = `
"\`\`\`ts
@observer
class OrderLine {
  @observable price: number = 0
}

\`\`\`
"
`;

exports[`should handle extended language mappings 1`] = `
"\`\`\`java
public class HelloWorld {}
\`\`\`
"
`;

exports[`should handle formatting failures and preserve the original code block 1`] = `
"\`\`\`ts
const x number = 1 // missing :
\`\`\`
"
`;

exports[`should handle unsupported code block languages 1`] = `
"\`\`\`unsupported-language prettier
const user: { [key: string]: string 
| number | boolean } = {
 name: "John Doe", age: 30 };
\`\`\`
"
`;
